@@ -197,5 +197,5 @@ public class CommentBean extends AbstractBean
 
   /** Field description */
   @Config(Constants.CONFIG_ADMIN_PAGESIZE)
-  private Integer pageSize = new Integer(20);
+  private Integer pageSize = Integer.valueOf(20);
 }
